# rust_sam

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sam-claude/: Cargo.toml
crates/sam-claude/src/: api.rs  api_key.rs  backend.rs  budget.rs  cli.rs  flow_runner.rs  lib.rs  llm_client.rs  mcp.rs  openai_client.rs  probe.rs  prompt.rs  session.rs  tools.rs  types.rs  whisper.rs  xai.rs
crates/sam-claude/tests/: integration_test.rs
crates/sam-core/: Cargo.toml
crates/sam-core/src/: agent.rs  config.rs  cron_store.rs  delivery_queue.rs  error.rs  flow.rs  flow_store.rs  hot_reload.rs  lib.rs  paths.rs  plugin.rs  skill_store.rs  tier.rs
crates/sam-imessage/: Cargo.toml
crates/sam-imessage/src/: lib.rs  outbound.rs  poller.rs  probe.rs  reader.rs  sender.rs  state.rs  types.rs
crates/sam-memory-adapter/: Cargo.toml
crates/sam-memory-adapter/src/: adapter.rs  lib.rs
crates/sam-tools/: Cargo.toml
crates/sam-tools/src/: lib.rs  registry.rs  schema.rs
docs/: PROJECT_SUMMARY.md
scripts/: com.sam.agent.plist  install.sh  log-rotate.sh  uninstall.sh
services/sam-agent/: Cargo.toml
services/sam-agent/src/: cli.rs  main.rs
services/sam-agent/src/cmd/: chat.rs  daemon.rs  dashboard.html  dashboard.rs  import_memories.rs  mod.rs  reload.rs  send.rs  slash_commands.rs  status.rs  telegram.rs  version.rs  web.rs
services/sam-agent/src/static/: index.html
services/sam-agent/tests/: agent_routing_test.rs
