[workspace]
resolver = "2"
members = [
    "crates/sam-core",
    "crates/sam-imessage",
    "crates/sam-claude",
    "crates/sam-tools",
    "crates/sam-memory-adapter",
    "services/sam-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paul Yu <paul.yu@unomic.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
rusqlite = { version = "0.31", default-features = false, features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
walkdir = "2"
base64 = "0.22"

# Memory brain (submodule)
memory-actor = { path = "vendor/memory-brain/crates/memory-actor" }
