[package]
name = "sam-claude"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sam — Claude Code CLI wrapper (probe + session spawn)"

[dependencies]
sam-core = { path = "../sam-core" }
sam-memory-adapter = { path = "../sam-memory-adapter" }
tokio = { workspace = true, features = ["process", "time", "rt", "rt-multi-thread", "macros"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
