[package]
name = "sam-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sam — external-command tool registry"

[dependencies]
sam-core = { path = "../sam-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
tracing.workspace = true
anyhow.workspace = true
